修改版本号

--- a/pascaltriangle.sty
+++ b/pascaltriangle.sty
@@ -11,7 +11,7 @@
 
 \NeedsTeXFormat{LaTeX2e}
 \RequirePackage{expl3}
-\ProvidesExplPackage{pascaltriangle}{2022-01-05}{2022A}
+\ProvidesExplPackage{pascaltriangle}{2022-01-06}{v1.0.0}
   {Typeset Pascal triangle figure with LaTeX3}
 
 \RequirePackage{xparse}
